# Parlant-Practice

./: .gitignore  IMPLEMENTATION_SUMMARY.py  README.md  debug_imports.py  gemini_service.py  gemini_service_minimal.py  gemini_simple.py  gemini_working.py  main.py  pyproject.toml  setup_env.py  setup_gemini_env.ps1  test.php  test2.java  test_api.py  test_gemini.py  test_import.py
Project-Manager/: .env.example  README.md  gemini_service.py  main.py  main_enhanced.py  requirements.txt
Project-Manager/parlant-data/: cache_embeddings.json  customers.json  evaluation_cache.json  sessions.json
java-project/: Main.java
parlant-data/: cache_embeddings.json  customers.json  evaluation_cache.json  sessions.json
