[project]
name = "parlant-gemini-healthcare-agent"
version = "1.0.0"
description = "Healthcare agent powered by Parlant framework and Google Gemini AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "parlant",
    "google-generativeai>=0.3.0",
    "python-dotenv",
    "pydantic>=2.0.0"
]
